Update :Geomagnetic data and geomagnetic data dorecast services addes
